fix align

--- a/guesscorrection/calculator.css
+++ b/guesscorrection/calculator.css
@@ -31,6 +31,7 @@ body {
     margin:auto;
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
     width: fit-content;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
